(lang dune 3.17)

(name aoc2024)

(generate_opam_files true)

(source
 (github Josh-Cena/aoc2024))

(authors "Joshua Chen")

(license LICENSE)

(package
 (name aoc2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
